--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@
   border-radius: 15px;
   border: none;
   box-shadow: 3px 1px 8px 0px rgb(197, 197, 197);
-  background-color: rgb(123, 138, 250);
+  background-color: rgb(145, 158, 255);
   opacity: 0.7;
 }
 
@@ -313,4 +313,4 @@ footer ul li a:hover {
   .login-card {
     width: 80%;
   }
-}
+}/*# sourceMappingURL=style.css.map */
