--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,13 @@
   outline: 1px solid rgb(216, 26, 36);
 }
 
+.navbar-nav {
+  margin-left: 20px;
+}
+.navbar-nav .nav-item {
+  margin-left: 10px;
+}
+
 #login:hover {
   background-color: rgb(18, 132, 178);
   border-radius: 20px;
@@ -33,8 +40,7 @@
   border-radius: 15px;
   border: none;
   box-shadow: 3px 1px 8px 0px rgb(197, 197, 197);
-  background-color: rgb(145, 158, 255);
-  opacity: 0.7;
+  background-color: rgb(161, 171, 252);
 }
 
 .fa-solid {
@@ -78,12 +84,6 @@ header nav {
   top: 73%;
 }
 
-.film-card .fa-bookmark {
-  font-size: 30px;
-  top: -1px;
-  right: 20%;
-  color: black;
-}
 .film-card img {
   border: none;
   width: 85%;
@@ -313,4 +313,4 @@ footer ul li a:hover {
   .login-card {
     width: 80%;
   }
-}
+}/*# sourceMappingURL=style.css.map */
