--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -9,7 +9,12 @@
         outline: 1px solid rgb(216, 26, 36);
     }
 }
-
+.navbar-nav{
+    margin-left: 20px;
+    .nav-item{
+        margin-left: 10px;
+    }
+}
 #login {
     &:hover {
         background-color: rgb(18, 132, 178);
@@ -43,8 +48,7 @@
     border-radius: 15px;
     border: none;
     box-shadow: 3px 1px 8px 0px rgb(197, 197, 197);
-    background-color: rgb(145, 158, 255);
-    opacity: 0.7;
+    background-color: rgb(161, 171, 252);
 
 }
 
